// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> backgroundImage, backgroundPosition, backgroundColor, backgroundRepeat 1`] = `
.c0 {
  background-color: white;
  background-image: url('someimagepath');
  background-repeat: no-repeat;
  background-position: center;
}

<div
  className="c0"
/>
`;

exports[`<Box /> borderRadius props set border-radius 1`] = `
.c0 {
  border-radius: 8px;
}

<div
  className="c0"
/>
`;

exports[`<Box /> borderTheme props set border 1`] = `
.c0 {
  border: 1px solid #E9C46A;
}

<div
  className="c0"
/>
`;

exports[`<Box /> boxShadow props set box-shadow 1`] = `
.c0 {
  box-shadow: 10px 5px 5px black;
}

<div
  className="c0"
/>
`;

exports[`<Box /> display, flex, flexDirection, flexWrap, alignItems, justifyContent 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
  display="flex"
/>
`;

exports[`<Box /> it renders 1`] = `
<div
  className=""
/>
`;

exports[`<Box /> margin props set margin 1`] = `
.c0 {
  margin: 40px;
}

<div
  className="c0"
/>
`;

exports[`<Box /> marginLeft, marginRight, marginTop, marginBottom 1`] = `
.c0 {
  margin-right: 20px;
  margin-left: 20px;
  margin-top: 10px;
  margin-bottom: 30px;
}

<div
  className="c0"
/>
`;

exports[`<Box /> padding props set padding 1`] = `
.c0 {
  padding: 40px;
}

<div
  className="c0"
/>
`;

exports[`<Box /> width and height props set width/height 1`] = `
.c0 {
  width: 50%;
  height: 50%;
}

<div
  className="c0"
  height="50%"
  width="50%"
/>
`;
